Added PlayerConnect/PlayerDisconnect gameevent plugin function calls.
Deleted 100+ lines of unused code from ass_server.lua
Moved writer/banlist commands to ass_plugins.lua
Removed ass_cmd.lua

------------- 5/4/15 -----------------

Fixed incorrect variable used in ASS_BanPlayer()
Split ass_server.lua into multiple files.
Redesigned ASS_RANKS as a table of rank info rather than crap.
Undid ASS_RANKNAMES and LevelIcons and other dumb tables I made.
PlayerRankings table removed entire.
Ranks now store to the player entity, and rely on each player.
Temp Admin rank supports ta_expiry = 0 for a permanent rank.
Temp Admin rank persists through map change.
ta_expiry PluginValue is deleted from non-Temp Admins.
Player profiles now work entirely per user instead, should make tmysql users easy.
LevelToString function unpuked.
Player unbanning chattext format updated and includes banning admin's name.

------------ 5/4/15 (#2) ---------------

Redesigned ranks to be more "dynamic".
Removed all IsRank functions and replaced them all with Get/HasAssLevel.
Removed all overriden shared functions on the player metatable.
Ranks pull a UserGroup string from the ASS_RANKS table when set.
Moved AdminSpeech from ass_server and moved it to a plugin.
Repurposed ASS_PlayerSpeech hook to only log chat.
Prefixed LevelToString, PCallError and IncludeSharedFile with ASS_ to prevent conflicting functions.
Fixed normal chat logging as team chat.

-------------- 5/5/15 ----------------

vON flatfile saving instead of tabletokeyvalues.
Redesigned player level loading to work with callbacks for MySQL.
Temp Admin's are sent their time countdown on initplayerspawn.

-------------- 9/25/15 ----------------

Converted Rcon to use net library instead of 3+ broken up console commands.
Changed player meta functions on the server to properly reference player rank instead of relying on unreliable nwvars.
Replaced instances of IsSuperAdmin that was missed in 5/4/15 update